Working game-saving, game cycle and other stuff. Ready to do the game itself!